TA-3: Make screen "Onboarding" 1) add page control & buttons to move to next/prev page 2) add fonts to resources

--- a/TaxiAggregator-iOS/Resources/Localizable.strings
+++ b/TaxiAggregator-iOS/Resources/Localizable.strings
@@ -16,3 +16,5 @@
 "MAP_ENTER_LOCATION" = "Enter location";
 "MAP_WHERE_TO" = "Where to?";
 
+"ONBOARDING_SKIP" = "Skip";
+"ONBOARDING_NEXT" = "Next";
