TA-9: Make screen "Saved Locations"

--- a/TaxiAggregator-iOS/Resources/Localizable.strings
+++ b/TaxiAggregator-iOS/Resources/Localizable.strings
@@ -23,3 +23,5 @@
 "ONBOARDING_FIRST_PAGE"  = "Обирай місце посадки та висадки.";
 "ONBOARDING_SECOND_PAGE" = "Ми тобі покажемо можливі варіанти. Обирай 🚕 серед запропонованих.";
 "ONBOARDING_THIRD_PAGE"  = "Вуаля, ти вже на місці.🥳 Економія грошей на очах 🤑";
+
+"SAVED_LOCATIONS_TITLE" = "Saved locations";
