--- a/TaxiAggregator-iOS/Resources/en.lproj/Localizable.strings
+++ b/TaxiAggregator-iOS/Resources/en.lproj/Localizable.strings
@@ -20,8 +20,8 @@
 "ONBOARDING_NEXT" = "Next";
 "ONBOARDING_DONE" = "Done";
 
-"ONBOARDING_FIRST_PAGE"  = "Обирай місце посадки та висадки.";
-"ONBOARDING_SECOND_PAGE" = "Ми тобі покажемо можливі варіанти. Обирай 🚕 серед запропонованих.";
-"ONBOARDING_THIRD_PAGE"  = "Вуаля, ти вже на місці.🥳 Економія грошей на очах 🤑";
+"ONBOARDING_FIRST_PAGE"  = "Choose a pickup and dropoff address.";
+"ONBOARDING_SECOND_PAGE" = "We will show you all the options. Choose 🚕 among those offered.";
+"ONBOARDING_THIRD_PAGE"  = "Voila, you are already there. 🥳 Saving money in front of your eyes 🤑";
 
 "SAVED_LOCATIONS_TITLE" = "Saved locations";
