TA-13: Make screen "Search results" -asdasd

--- a/TaxiAggregator-iOS/Resources/en.lproj/Localizable.strings
+++ b/TaxiAggregator-iOS/Resources/en.lproj/Localizable.strings
@@ -25,3 +25,5 @@
 "ONBOARDING_THIRD_PAGE"  = "Voila, you are already there. 🥳 Saving money in front of your eyes 🤑";
 
 "SAVED_LOCATIONS_TITLE" = "Saved locations";
+
+"SEARCH_RESULTS_CHOOSE_ON_MAP" = "Set the location on the map";
