- add additional screen to select destination

--- a/TaxiAggregator-iOS/Resources/en.lproj/Localizable.strings
+++ b/TaxiAggregator-iOS/Resources/en.lproj/Localizable.strings
@@ -27,3 +27,6 @@
 "SAVED_LOCATIONS_TITLE" = "Saved locations";
 
 "SEARCH_RESULTS_CHOOSE_ON_MAP" = "Set the location on the map";
+
+"DESTINATION_WHERE_YOU_GONNA" = "Where are you going?";
+"DESTINATION_TIME_TO_FIND_CHEAPEST_CAB" = "Time to find cheapest cab!";
