TA-14.1 - Make screen "Choose location on the map" - update zoom value for map that using for choose location on map - display title on the screen "Choose on map" - move zoom values that take from config to view model and take via it - hide back button title on the screen "Choose on map"

--- a/TaxiAggregator-iOS/Resources/en.lproj/Localizable.strings
+++ b/TaxiAggregator-iOS/Resources/en.lproj/Localizable.strings
@@ -40,3 +40,5 @@
 "TAXIS_DETERMINING_ADDRESS" = "We're determining your address...";
 "TAXIS_CONFIRM_PICKUP"      = "Confirm pick up location";
 "TAXIS_CONFIRM_DESTINATION" = "Confirm destination location";
+"CHOOSE_ON_MAP_PICKUP_TITLE" = "Pickup";
+"CHOOSE_ON_MAP_DESTINATION_TITLE" = "Destination";
